--- a/Acceuil.html
+++ b/Acceuil.html
@@ -5,10 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Acceuil</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon"
-            href="favicon.png">
+    <link rel="shortcut icon" href="cafejav.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -19,12 +18,11 @@
 
 
     <nav >
-        <ul>
-            <li><a href="Acceuil.html">Accueil</a></li>
-            <li><a href="Menu.html">Menu</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Horaire.html">Horaire</a></li>
-          </ul>
+       
+        <a href="Acceuil.html">Accueil</a>
+        <a href="Menu.html">Menu</a>
+      <a href="Contact.html">Contact</a>
+        <a href="Horaire.html">Horaire</a>
       </nav>
 
 
