--- a/Acceuil.html
+++ b/Acceuil.html
@@ -6,15 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="cafejav.ico" type="image/x-icon">
 </head>
 
 <body>
-  
-    <h1><centre>Café des Amis</centre></h1>  
 
-    <img src="photo0jpg.jpg" height="400" width="auto">
+
+    <h1><em>Acceuil</em></h1>
 
 
     <nav >
@@ -23,16 +22,34 @@
         <a href="Menu.html">Menu</a>
       <a href="Contact.html">Contact</a>
         <a href="Horaire.html">Horaire</a>
+  
       </nav>
 
 
-      <p>
+<div class="contener"><img src="photo0jpg.jpg" height="400" width="auto"></div>
+    
 
-        d’apporter une solution innovante d’inclusion pour les personnes recrutées, Café Joyeux entend réparer cette inégalité. En 2017 naît le premier café-restaurant solidaire Café Joyeux qui emploie et forme des …
-d’apporter une solution innovante d’inclusion pour les personnes recrutées, Café Joyeux entend réparer cette inégalité. En 2017 naît le premier café-restaurant solidaire Café Joyeux qui emploie et forme des …
- d’apporter une solution innovante d’inclusion pour les personnes recrutées, Café Joyeux entend réparer cette inégalité. En 2017 naît le premier café-restaurant solidaire Café Joyeux qui emploie et forme des … 
-        d’apporter une solution innovante d’inclusion pour les personnes recrutées, Café Joyeux entend réparer cette inégalité. En 2017 naît le premier café-restaurant solidaire Café Joyeux qui emploie et forme des …
-      </p>
+   
+
+      <article>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Provident vero dicta mollitia dolorem! Quasi illo repellat sint ipsum ipsa officia? 
+        Iste magni excepturi tempore cupiditate pariatur cumque optio impedit non. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Dolorem distinctio dolores rerum officia illum. 
+        Officiis sequi quidem omnis eveniet! Sint soluta alias vitae nihil veniam? 
+        Commodi, molestiae quisquam harum iure natus beatae,
+         nisi culpa neque odio omnis excepturi libero velit voluptatibus sequi ut ad inventore repellendus assumenda cupiditate? 
+        Natus iure molestias, id commodi eius earum dolorem. 
+        Id totam sint ab reiciendis ipsa dolorum quos architecto aliquam consectetur ex tempora dicta eaque at ipsum laborum obcaecati iusto recusandae, 
+        amet quo aspernatur, autem enim, itaque facere velit. 
+        Quos voluptatem, officiis fugit tempore tenetur tempora numquam incidunt reiciendis itaque deserunt labore laborum 
+        unde perspiciatis rem sit consectetur corporis eaque nisi quas eveniet? 
+        Amet, dolorem! Architecto id recusandae hic numquam quae minus reprehenderit pariatur cumque velit consequuntur 
+        ipsam debitis saepe accusantium dicta quidem deleniti, vero molestias. 
+        Praesentium ad, placeat officiis doloremque odio cum accusamus in enim rem qui! Animi, alias ullam? Eveniet, consequuntur recusandae?
+
+      </article>
 
 
 </body>
